cmake_minimum_required(VERSION 3.17.3)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(leetcode
        test11.cpp
        test_142.cpp
        test_155.cpp
        test_20.cpp
        test_206.cpp
        test_21.cpp
        test_21_err.cpp
        test_224.cpp
        test_224.h
        test_86.cpp test_232.cpp test_232.h test_239.cpp test_328.cpp qsort.cpp test_23.cpp test_11.cpp mqsort.cpp test_402.cpp test_376.cpp test_122.cpp test_35.cpp test_34.cpp test_33.cpp test_74.cpp test_4.cpp test_611.cpp test_367.cpp test_231.cpp test_338.cpp test_137.cpp test_318.cpp test_144.cpp test_94.cpp test_145.cpp test_199.cpp test_114.cpp test_108.cpp test_538.cpp test_450.cpp TreeNode.h test_297.cpp test_222.cpp test_104.cpp test_111.cpp test_257.cpp test_110.cpp test_404.cpp test_513.cpp test_669.cpp test_235.cpp test_530.cpp test_654.cpp test_322.cpp test_518.cpp test_64.cpp test_72.cpp test_121.cpp test_123.cpp test_279.cpp test_62.cpp test_63.cpp test_96.cpp test_174.cpp test_198.cpp test_337.cpp)
